# OSLabs

./: .gitignore  CMakeLists.txt  README.md
Lab1/: Allocator.cpp  Allocator.h  README.md  main.cpp
Lab2/: PageAllocator.cpp  PageAllocator.h  README.md  main.cpp
Lab3/: Processor.cpp  Processor.h  Request.h
Lab3Sharp/: Lab3Sharp.sln  README.md
Lab3Sharp/lab/: Processor.cs  Program.cs  Request.cs
Lab4/: README.md  hungarian.h  main.cpp
Lab5/: README.md  main.cpp
Lab6/: commands.txt  original.cpp
lab4/: Job.h  hungarian.h  main.cpp
lab5/: README.md  main.cpp
lab6/: README.md  optimized.cpp  original.cpp
